@startuml er_physical
' Фізична модель (огляд): 15 таблиць нормативного DDL брифінгу §6 + ревізія 0004 (docs/db_schema.md §3,
' alembic/versions/0001…0004). Показано ключі, FK і основні колонки; повний DDL — у міграціях.
' Суцільна лінія — FK у DDL; пунктир — логічне посилання без FK (ST-05). Автор: Андрій Жук, 2026.
title Фізична схема PostgreSQL 16 (без розширень): 15 таблиць, ревізії 0001–0004
skinparam defaultFontName Helvetica
skinparam shadowing false
skinparam linetype ortho
hide circle

package "0001_core" {
  entity instrument {
    * id : SERIAL <<PK>>
    --
    venue, symbol_venue : TEXT <<UQ (venue, symbol_venue)>>
    symbol_canon : TEXT <<UQ>>
    contract_type : TEXT (SPOT | PERP)
    tick_size, step_size, min_notional : NUMERIC(38,18)
    mmr : NUMERIC(10,8) = 0.005
    maint_amount : NUMERIC(38,18)
    max_leverage : SMALLINT = 3
  }
  entity candle {
    * instrument_id : INT <<PK, FK>>
    * tf : TEXT <<PK>>
    * open_time : TIMESTAMPTZ <<PK>>
    --
    close_time, o, h, l, c, volume, quote_volume, vwap
    trades_count, is_closed, is_synthetic
    src : SMALLINT (1 ws, 2 rest, 3 replay)
    anomaly_score, ingested_at
    CHECK ck_hl, ck_h, ck_l, ck_vwap
  }
  entity event_journal {
    * run_id : UUID <<PK>>
    * seq : BIGINT <<PK>>
    --
    ts_event_ns, ts_ingest_ns : BIGINT
    kind : TEXT; payload : JSONB
    prev_hash, hash : BYTEA
  }
  entity ingest_gap {
    * id : BIGSERIAL <<PK>>
    --
    instrument_id : INT <<FK>>
    stream (klines | trades | depth)
    ts_lo, ts_hi, expected_count, filled_rows
    detector (seq | bucket_count | time)
    status (OPEN | FILLING | FILLED | PARTIAL | UNFILLABLE)
    attempts, detected_at, closed_at
  }
  entity dq_score {
    * instrument_id : INT <<PK>>
    * hour_start : TIMESTAMPTZ <<PK>>
    --
    completeness, validity, timeliness, continuity
    score : NUMERIC(6,4) CHECK [0, 1]
  }
}

package "0002_trading (+ 0004_decision_trace_extras)" {
  entity strategy {
    * id : SERIAL <<PK>>
    --
    name, version <<UQ>>
    rules_yaml, membership_yaml : TEXT
    rules_hash : BYTEA <<UQ>>
    created_by, created_at, is_active
  }
  entity run {
    * id : UUID <<PK>>
    --
    kind (backtest | paper | replay | grid_cell | testnet)
    strategy_id : INT <<FK>>
    instrument_id : INT <<FK>>
    tf, ts_from, ts_to, config : JSONB
    config_hash, dataset_hash : BYTEA
    git_sha : CHAR(40); seed : BIGINT
    engine (mamdani | linear)
    journal_head_hash, equity_hash : BYTEA
    status (RUNNING | DONE | FAILED), error
    <<UQ ux_run_identity (config_hash, dataset_hash, seed, engine, git_sha)>>
  }
  entity decision {
    * id : BIGSERIAL <<PK>>
    --
    run_id : UUID <<FK>>
    instrument_id : INT
    open_time : TIMESTAMPTZ
    t_in, r_in, v_in, agreement, kappa, u_raw, u_final
    detector_outputs, memberships, fired_rules : JSONB
    target_side, target_qty, binding_constraint
    stop_price, tp_price, liq_price
    sizing, risk : JSONB; narrative : TEXT <<0004>>
    <<UQ (run_id, instrument_id, open_time)>>
  }
  entity sim_order {
    * id : BIGSERIAL <<PK>>
    --
    run_id : UUID <<FK>>
    decision_id : BIGINT <<FK, NOT NULL (ST-01)>>
    client_order_id : UUID <<UQ>>
    venue_order_id, instrument_id, side
    otype (MARKET | STOP_MARKET)
    qty, filled_qty, avg_fill_price, fee, slippage_bps
    liquidity, status, reject_code, ts_created, ts_filled
  }
  entity position {
    * id : BIGSERIAL <<PK>>
    --
    run_id : UUID; instrument_id : INT
    side, qty, avg_entry, leverage, allocated_margin
    stop_price, tp_price, liq_price
    realized_pnl, funding_paid, max_adverse_excursion
    opened_at, closed_at
    exit_reason (SIGNAL | STOP | TP | RISK_VETO | HALT | LIQUIDATION)
  }
  entity risk_event {
    * id : BIGSERIAL <<PK>>
    --
    run_id : UUID; ts; instrument_id
    rule : TEXT; verdict (ALLOW | SHRINK | VETO)
    factor : NUMERIC(6,4) (+ payload.factor_exact, API-03)
    observed, limit_value : NUMERIC(38,18)
    state_from, state_to, dwell_bars, actor, payload : JSONB
  }
  entity equity_point {
    * run_id : UUID <<PK>>
    * ts : TIMESTAMPTZ <<PK>>
    --
    equity, cash, unrealized, gross_exposure
    leverage, drawdown, risk_state, kappa
    var95, cvar95 : NUMERIC(38,18) (RF-03)
  }
  entity run_metric {
    * run_id : UUID <<PK>>
    * name : TEXT <<PK>>
    --
    value : DOUBLE PRECISION
  }
}

package "0003_auth_audit" {
  entity app_user {
    * id : SERIAL <<PK>>
    --
    login : TEXT <<UQ>>
    pwd_hash : TEXT (bcrypt 12)
    role (operator | analyst | auditor | admin)
    created_at
  }
  entity audit_log {
    * id : BIGSERIAL <<PK>>
    --
    ts, user_id : INT
    action, target : TEXT
    before_json, after_json : JSONB
    ip : INET
  }
}

instrument ||--o{ candle
instrument ||--o{ ingest_gap
instrument |o--o{ run
strategy |o--o{ run
run ||--o{ decision
run |o--o{ sim_order
decision ||--o{ sim_order
run ..o{ position
run ..o{ risk_event
run ..o{ equity_point
run ..o{ run_metric
run ..o{ event_journal
instrument ..o{ dq_score
app_user ..o{ audit_log

note right of candle
  Індекси: candle_pkey (ціль ON CONFLICT upsert);
  ix_candle_time_brin — BRIN (open_time), pages_per_range = 32;
  ix_candle_lookup (instrument_id, tf, open_time DESC) — дублює PK (ST-12).
end note
note right of decision
  ix_decision_rules_gin — GIN (fired_rules jsonb_path_ops):
  fired_rules @> '[{"rule_id":"R07"}]'
end note
note bottom of risk_event
  ix_risk_run_ts (run_id, ts DESC);
  ix_risk_veto (run_id) WHERE verdict = 'VETO'
end note
note bottom of ingest_gap
  ix_gap_open (instrument_id, detected_at DESC)
  WHERE status IN ('OPEN','FILLING')
end note
note bottom of audit_log
  event_journal і audit_log — append-only:
  роль fuzzhelm_app має лише SELECT, INSERT
  (REVOKE UPDATE, DELETE; ревізія 0003, ST-02)
end note
@enduml
